<resources>
    <string name="app_name">Better XCloud Client</string>
    <string name="action_start">Start XCloud</string>
    <string name="action_options">Options</string>
    <string name="title_options">Options</string>
    <string name="pref_kernel_title">Controller kernel</string>
    <string name="pref_category_mapping">Controller key mapping</string>
    <string name="controller_button_a">A button</string>
    <string name="controller_button_b">B button</string>
    <string name="controller_button_x">X button</string>
    <string name="controller_button_y">Y button</string>
    <string name="controller_button_lb">Left bumper</string>
    <string name="controller_button_rb">Right bumper</string>
    <string name="controller_button_lt">Left trigger</string>
    <string name="controller_button_rt">Right trigger</string>
    <string name="controller_button_view">View button</string>
    <string name="controller_button_menu">Menu button</string>
    <string name="controller_button_ls">Left stick press</string>
    <string name="controller_button_rs">Right stick press</string>
    <string name="controller_button_dpad_up">D-Pad up</string>
    <string name="controller_button_dpad_down">D-Pad down</string>
    <string name="controller_button_dpad_left">D-Pad left</string>
    <string name="controller_button_dpad_right">D-Pad right</string>
    <string name="kernel_native_summary">Use the Android native controller kernel with low-latency gamepad events.</string>
    <string name="kernel_web_summary">Use the browser controller kernel provided by the website.</string>
    <string name="keycode_button_a">Keycode A</string>
    <string name="keycode_button_b">Keycode B</string>
    <string name="keycode_button_x">Keycode X</string>
    <string name="keycode_button_y">Keycode Y</string>
    <string name="keycode_button_lb">Keycode LB</string>
    <string name="keycode_button_rb">Keycode RB</string>
    <string name="keycode_button_lt">Keycode LT</string>
    <string name="keycode_button_rt">Keycode RT</string>
    <string name="keycode_button_ls">Keycode LS</string>
    <string name="keycode_button_rs">Keycode RS</string>
    <string name="keycode_button_menu">Keycode Menu</string>
    <string name="keycode_button_view">Keycode View</string>
    <string name="keycode_dpad_up">Keycode D-Pad up</string>
    <string name="keycode_dpad_down">Keycode D-Pad down</string>
    <string name="keycode_dpad_left">Keycode D-Pad left</string>
    <string name="keycode_dpad_right">Keycode D-Pad right</string>
    <string name="keycode_generic">Keycode %1$d</string>
    <string name="user_agent_suffix">BetterXcloudAndroid/1.0</string>
    <string name="xcloud_url">https://www.xbox.com/en-US/play</string>
</resources>
